Change withValidation API to accept a URL instead of URI
The implementation of withValidation currently converts the URI
parameter to a URL and then opens it as a stream to provide to the
validator. But this conversion implicitly requires the URI to be a valid
URL (e.g. has a scheme, can be opened as a stream). We could add
documentation to make this more clear, but changing it to a URL makes it
much more explicit and ensures our invariants hold.

DAFFODIL-3035